Closed Bug 674731 Opened 14 years ago Closed 14 years ago

WebGL/ANGLE interop with D3D layers requests incorrect extension

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8
Tracking Status
firefox5 --- unaffected
firefox6 --- fixed
firefox7 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Keywords: regression, Whiteboard: [qa-])

Attachments

(1 file)

GLContextEGL requires extension "EGL_ANGLE_surface_d3d_share_handle", which no longer exists. According to the extension spec, the extension was renamed in version 2 to "EGL_ANGLE_surface_d3d_texture_2d_share_handle", but this change was evidently never factored back into GLContextEGL. Refs: http://www.khronos.org/registry/egl/extensions/ANGLE/EGL_ANGLE_surface_d3d_texture_2d_share_handle.txt
EGL_ANGLE_surface_d3d_share_handle only ever existed in a local patch that we used to have, not in upstream ANGLE. When I upgraded ANGLE to r653 (bug 657748), I removed this patch as that functionality had been integrated upstream. I didn't notice that the extension name was different.
Attached patch FixSplinter Review
Updates extension and relevant identifiers to match spec. Fixed y-flip problem with shared textures.
Attachment #549201 - Flags: review?(bjacob)
Attachment #549201 - Flags: review?(bjacob) → review+
Summary: ANGLE layers acceleration requests incorrect extension → WebGL/ANGLE interop with D3D layers requests incorrect extension
Landed on central: http://hg.mozilla.org/mozilla-central/rev/267ada59f86f Please give us beta approval.
Attachment #549201 - Flags: approval-mozilla-beta?
Attachment #549201 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Attachment #549201 - Flags: approval-mozilla-beta?
Attachment #549201 - Flags: approval-mozilla-beta+
Attachment #549201 - Flags: approval-mozilla-aurora?
Attachment #549201 - Flags: approval-mozilla-aurora+
Target Milestone: --- → mozilla8
Mozilla/5.0 (Windows NT 6.1; rv:7.0) Gecko/20100101 Firefox/7.0 Can anyone please help me with a test case or with STR / guidelines that I can use to verify this fix? Thank you
Actually, no, it's not very easy to verify this one. The only user-visible difference is speed: when we had this bug, running WebGL demos with a large window or full-screen was slower than normal. In order to prevent this kind of regression in the future, we need WebGL performance tests: bug 676138.
Depends on: 676138
qa- as no QA fix verification needed
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: