Bug 674731 - WebGL/ANGLE interop with D3D layers requests incorrect extension - r=bjacob, a=asa